# OperatingSystemSimulation

./: README.md  app_manager.py  applications.py  appmanager.py  command_handler.py  log_config.py  main.py  process_controller.py  process_manager.py  pyproject.toml  shrek.txt  thread_manager.py
tests/: test_process_ipc.py  test_process_manager.py
