[tool.poetry]
name = "operatingsystemsimulation"
version = "0.1.0"
description = ""
authors = ["afeins19 <afeinberg35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.8"
argparse = "^1.4.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
